--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   },
   "homepage": "https://github.com/krishna-creator/image-uploader#readme",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^5.0.0"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
