--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
